<resources>
    <string name="app_name">Gold Rush</string>
    <string name="logout">Log Out</string>
    <string name="forgotPASSID"><u>Forgot Password or ID?</u></string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="WhatIsYourGender">What is yoyur gender?</string>
    <string name="HowAboutAreYourBodyStatus">How about your body status?</string>
</resources>
