<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar"
            bind:rightButton="@{View.GONE}" />

        <!-- 내용들어가는 가장 큰 리니어-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--이름-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/FirstName"
                        android:textSize="12dp"/>

                    <EditText
                        android:id="@+id/signup_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/LastName"
                        android:textSize="12dp"/>

                    <EditText
                        android:id="@+id/signup_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18dp"/>
                </LinearLayout>

            </LinearLayout>

            <!--핸드폰번호-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="18dp"
                        android:text="@string/MobileNumber"
                        android:textSize="12dp"/>

                    <Spinner
                        android:id="@+id/signup_country_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp">

                    </Spinner>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="18dp"
                        android:text=""
                        android:textSize="12dp"/>

                    <EditText
                        android:id="@+id/signup_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18dp"/>
                </LinearLayout>

            </LinearLayout>

            <!--이메일-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/Email"
                    android:textSize="12dp"/>

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18dp"/>
            </LinearLayout>

            <!--비밀번호-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/Password"
                    android:textSize="12dp"/>

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"/>
            </LinearLayout>

            <!--비밀번호 확인-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/ConfirmPassword"
                    android:textSize="12dp"/>

                <EditText
                    android:id="@+id/signup_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="18dp"/>
            </LinearLayout>

            <!--성별 선택-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/WhatIsYourGender"
                    android:textSize="12dp"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/signup_male"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Male" />
                    -

                    <RadioButton
                        android:id="@+id/signup_female"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Female" />

                </RadioGroup>


            </LinearLayout>

            <!--키 몸무게-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/HowAboutAreYourBodyStatus"
                android:textSize="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:layout_marginTop="18dp"
                                android:text="Height"
                                android:textSize="12dp"/>

                            <EditText
                                android:id="@+id/signup_height"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="18dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:layout_marginTop="18dp"
                                android:text="Weight"
                                android:textSize="12dp"/>

                            <EditText
                                android:id="@+id/signup_weight"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textSize="18dp"/>
                        </LinearLayout>

                    </LinearLayout>



            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signup_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4.5"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="Register" />
    </LinearLayout>

</layout>